# FE_Method_Physics

./: README.md
Module 1/: main.cpp
Module 2/: CMakeLists.txt  main.cpp  triangle.h
Module 3/: CMakeLists.txt  FEM1.h  compile_commands.json  main1.cpp  vcpkg.json
